fixed gradient on mobile;

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,5 +1,6 @@
 @import "../../scss/variables";
 @import "../../scss/mixins";
+@import "../../scss/theme";
 
 @include gradientAnimation;
 
@@ -23,36 +24,6 @@
     position: absolute;
     animation: gradientAnimation 5s ease-in-out infinite;
   }
-}
-
-.theme-default:after {
-  background: $themeGradient;
-  background-size: 600% 600%;
-}
-
-.theme-light-blue:after {
-  background: $themeGradientLightBlue;
-  background-size: 600% 600%;
-}
-
-.theme-blue:after {
-  background: $themeGradientBlue;
-  background-size: 600% 600%;
-}
-
-.theme-red:after {
-  background: $themeGradientRed;
-  background-size: 600% 600%;
-}
-
-.theme-lilac:after {
-  background: $themeGradientLilac;
-  background-size: 600% 600%;
-}
-
-.theme-green:after {
-  background: $themeGradientGreen;
-  background-size: 600% 600%;
 }
 
 .row {
